--- a/main.css
+++ b/main.css
@@ -18,3 +18,11 @@ li a{
     color: lightblue;
     text-decoration: none;
 }
+
+.red {
+    background: red;
+}
+
+.green {
+    background: green;
+}
