--- a/shk/shk.css
+++ b/shk/shk.css
@@ -19,6 +19,11 @@ option {
     font-size: 30px;
 }
 
+textarea {
+    width: 100%;
+    height: 300px;
+}
+
 button{
     border-radius: 10px;
     margin: 0.5rem;
